--- a/static/style.css
+++ b/static/style.css
@@ -149,10 +149,10 @@ a img{
 
 .android-be-together-section {
   position: relative;
-  height: 800px;
+  height: 400px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('/static/images/saving.jpg') center 30% no-repeat;
+  background: url('/static/images/saving.png') center 30% no-repeat;
   background-size: cover;
 }
 
